Fixed squished servant icons on mobile

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -32,7 +32,7 @@ div#__next {
     border-right: 2px solid white !important;
 }
 img {
-    /* transform: translateX(1%); */
+    height: auto;
 }
 /* Monitors only */
 @media (min-width: 991.98px) {
